# db

./: README.md  pyproject.toml  setup.py
chythonDB/: __init__.py  tests.py  utils.py
chythonDB/database/: __init__.py  cgr.py  config.py  indexes.py  molecule.py  populate.py  reaction.py  substance.py  utilities.py
examples/: Tutorial.ipynb  Upload to DB Reactions tutorial.ipynb  Upload to DB Substances tutorial.ipynb
