[tool.poetry]
name = "chythondb"
version = "0.1.0"
description = ""
authors = ["TimurGimadiev <timur.gimadiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
chython = "^1.68"
pony = "^0.7.16"
datasketch = "^1.6.3"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
multiprocess = "^0.70.15"
psycopg-binary = "^3.1.10"
psycopg2-binary = "^2.9.7"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
